force-app/main/default/objects/FEC_Incorrect_Payment_Info__c/FEC_Incorrect_Payment_Info__c.object-meta.xml
<CustomObject>
    <label>Incorrect Payment Info</label>
    <nameField>
        <displayFormat>IPI - {0}</displayFormat>
        <label>Incorrect Payment Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incorrect Payment Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>