force-app/main/default/objects/FEC_Incorrect_Payment_Info__c/fields/FEC_Adjusted_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Adjusted_Amount__c</fullName>
    <label>Adjusted Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>