force-app/main/default/objects/FEC_Incorrect_Payment_Info__c/fields/FEC_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Incorrect Payment Info</relationshipLabel>
    <relationshipName>Incorrect_Payment_Info</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>