force-app/main/default/objects/FEC_Incorrect_Payment_Info__c/fields/FEC_Correct_Account_Contract__c.field-meta.xml
<CustomField>
    <fullName>FEC_Correct_Account_Contract__c</fullName>
    <label>Correct Account Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>